2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/tutorial.itely (A piano excerpt): 
	* Documentation/user/introduction.itely (Introduction): Typo fix.

	* input/test/header-ifelse.ly: Bugfix: call numbers->string only
	on first three elements of ly-version list.

	* input/test/trills.ly: Comment out \comma.

	* lily/tab-note-heads-engraver.cc: 
	* scm/translator-property-description.scm: Add tablatureFormat.

	* input/test/staff-bracket.ly: Update.

	* lily/regular-spacing-engraver.cc: Add regular-distance-to.

	* input/test/orchestscore.ly:  
	* input/test/part-combine-moments.ly:
	* input/test/part-combine-staff.ly: markScriptPadding ->
	RehearsalMark #'padding.

2002-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/introduction.itely: small corrections.

	* scm/translator-property-description.scm (tablatureFormat):
	describe property.

	* lily/parser.yy (property_def): Ugh. Switch off
	internal-type-checking for autoBeamSettings.

2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/mensural-ligature-engraver.cc:
	* scm/grob-property-description.scm: Add head-width, join-left,
	primitive.
	
	* lily/mensural-ligature.cc: 
	* lily/ligature-bracket.cc: 
	* scm/grob-property-description.scm: 

	* lily/ligature-head.cc: Add ligature-primitive-callback.

	* input/test/beam-control.ly: 
	* input/test/bar-script-visibility.ly: Update.

	* lily/music.cc (internal_set_mus_property): [!NDEBUG] Remove, use
	abort instead of assert.

2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/ambitus.ly: Comment out ambitus until anal-proof.

	* buildscripts/mf-to-table.py (write_fontlist): change
	extra-extent-X extra-X-extent.

	* scm/music-property-description.scm (label): Typecheck markup?
	(was string?).

	* Documentation/user/refman.itely (Tablatures basic): Change
	TabStaff @lilypond snippets to @example until TabStaff is
	anal-proof.

2002-08-18  Rune Zedeler <rune@zedeler.dk>
