@@ -163,9 +163,11 @@ etf2ly.
 
 @cindex ABC
 
-ABC is a fairly simple ASCII based format. It is described at
-@uref{http://www.gre.ac.uk/~c.walshaw/abc2mtex/abc.txt}. abc2ly
-translates from ABC to LilyPond. It is invoked as follows:
+ABC is a fairly simple ASCII based format. It is described at the abc site:
+@quotation
+@uref{http://www.gre.ac.uk/~c.walshaw/abc2mtex/abc.txt}
+@end quotation
+abc2ly translates from ABC to LilyPond. It is invoked as follows:
 
 @example
         abc2ly [@var{option}]@dots{} @var{abc-file}
