@@ -85,19 +85,7 @@ this and other documentation.
 @mbinclude dedication.itely
 
 @menu
-* Preface::                        Preface.
-* Introduction::                   What, Why, How.
-* Tutorial::                       A tutorial introduction to LilyPond.
-* Reference Manual::               Reference Manual.
-* Advanced Topics::                How it all works.
-* Invoking LilyPond::              Operation.
-* Converting from other formats::  Converting to lilypond source format.
-* Insert music snippets into your texts using lilypond-book::
-                                   The lilypond-book manual.
-* Literature::                     Additional reading material.
-* Index::                          Unified index.
-* Refman appendix::                
-* GNU Free Documentation License:: FDL.
+* Index::                       Unified index.
 @end menu
 @end ifnottex
 
